<resources>
    <string name="app_name">Conversor de Moedas</string>
    <string name="qual_o_valor_em_real">Qual o valor em real?</string>
    <string name="total_em_dolar">Total em Dólar:</string>
    <string name="dolar">Dólar</string>
    <string name="valor_em_euro">Valor em Euro:</string>
    <string name="euro">Euro</string>
    <string name="calcular">Calcular</string>
    <string name="cota_o_dollar">Cotação Dólar</string>
    <string name="cot_eruo">Cotação Euro</string>
    <string name="logar">Logar</string>
    <string name="lembrar_me">Lembrar-me</string>
    <string name="usuario">Usuário</string>
    <string name="senha">Senha</string>
    <string name="conversor_moeda_dash">Conversor Moeda</string>
    <string name="realize_suas_convers_es_de_moeda_dash">Realize suas conversões de moeda</string>
    <string name="carros_dash">Carros</string>
    <string name="listagem_de_carros_dash">Listagem de Carros</string>
</resources>